<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#E7EDDF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hh8"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="@color/green"/>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/hh9"
            tools:src="@tools:sample/avatars" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="369dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:lineSpacingExtra="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/mult"
            android:background="@drawable/edit"
            android:textColor="@color/green"
            />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/hh3" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>