<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3"
    >

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#fff"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hh1"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="306dp"
        android:text="@string/hh2"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="70dp"

        app:layout_constraintTop_toBottomOf="@+id/textView11" >

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E7EDDF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="40dp"
                android:text="@string/hh4"
                android:textColor="@color/green"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hh5"
                android:textColorHint="@color/green"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/green"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="40dp"
                android:text="@string/hh6"
                android:textColor="@color/green"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hh7"
                android:textColorHint="@color/green"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/green"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="30dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="26dp"
        android:text="@string/hh3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>